# drission-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md  drission_session_result.json  drission_win_test_result.json  rust-toolchain.toml
.cursor/: mcp.json
.cursor/skills/drs-browser/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: parsing.rs
crates/drission-cli/: Cargo.toml
crates/drission-cli/src/: backend.rs  cli.rs  daemon.rs  engine.rs  identity_cmd.rs  main.rs  mcp.rs  ocr_cmd.rs  paths.rs  protocol.rs  setup.rs
docker/: entrypoint.sh
docs/: API映射.md  CDP过盾.md  CF协议过.md  CLI.md  Chrome自动下载.md  OCR模型热替换.md  README.md  SKILL.md  TLS指纹.md  mcp-持久浏览器.md  后端feature化-A彻底.md  差异化路线.md  并发池.md  录制与无障碍.md  指纹.md  服务器部署.md  标配补齐.md  第三梯队.md  设计.md  逆向增强.md  长监听与滑动.md
examples/: 1.html  README.md  actions_drag.rs  anti_detect.rs  apizero_login.rs  bilibili_listen_long.rs  cdp_advanced.rs  cdp_demo.rs  cdp_download.rs  cdp_dump_env.rs  cdp_fetch.rs  cdp_fingerprint.rs  cdp_fp.rs  cdp_keyboard.rs  cdp_pool.rs  cf_check.rs  concurrent_listen.rs  console_listen.rs  douyin_capture.rs  douyin_dump_env.rs  douyin_listen.rs  douyin_listen_long.rs  download_manager.rs  dump_env_fingerprint.rs  dx_slide.rs  ele_extras.rs  env_signer.rs  exa_cf.rs  extras_demo.rs  fetch_browser.rs  file_upload.rs  form_fill.rs  form_input.rs  geetest_diag.rs  geetest_probe.rs  geetest_slide.rs  gpu_probe.rs  hl_ch.rs  intercept.rs  intercept_window.rs  (+25 more)
examples/antidetect/: anti_detect.rs  cdp_fingerprint.rs  cdp_fp.rs  fp_verify.rs  stealth_check.rs
examples/assets/: env_sample.js  seed_sample.json
examples/camoufox/: actions_drag.rs  ele_extras.rs  extras_demo.rs  form_fill.rs  new_tab.rs  page_basics.rs  page_extras.rs  quickstart.rs  relative_shadow.rs
examples/cdp/: cdp_advanced.rs  cdp_extras.rs  cdp_fetch.rs  cdp_recorder.rs
examples/clickword/: yidun_click.rs  yidun_click_stable.rs  yidun_collect.rs  yidun_probe.rs  yidun_trace.rs
examples/cloudflare/: cf_flow_capture.rs  cf_jsd_recon.rs  cf_turnstile_dump.rs  cf_turnstile_e2e.rs  cf_turnstile_hybrid.rs  cf_turnstile_recon.rs  exa_cf.rs
examples/env/: env_signer.rs
examples/learn/: bilibili_covers.rs  learn_basics.rs
examples/network/: console_listen.rs  intercept.rs  intercept_window.rs  ws_connect.rs
examples/ocr/: apizero_login.rs  clickword_cli.rs  clickword_eval.rs  det_probe.rs  ocr_captcha.rs  ocr_hotswap.rs
examples/pool/: pool_crawl.rs  proxy_health.rs
examples/python_sidecar/: publish_stub.py
examples/reverse/: re_anti_debug.rs  re_hook.rs  re_probe.rs  re_replay.rs  re_rrmj.rs  re_rrmj_replay.rs  re_scripts.rs  re_verify.rs  re_xhr_break.rs  re_yt_diag.rs  re_yt_play.rs  re_yt_protocol.rs  re_yt_sig.rs  re_yt_sig2.rs  yt_dl.rs  yt_engine.rs
examples/session/: web_page_scrape.rs
examples/sites/: douyin_capture.rs  douyin_dump_env.rs  hubei_zfwj_csv.rs  hubei_zfwj_protocol.rs  luffycity_capture.rs  luffycity_download.rs  luffycity_protocol.rs
examples/slider/: dx_slide.rs  geetest_diag.rs  slider_local.rs
examples/windows/: win_bilibili_test.rs  win_cf_test.rs  win_diag.rs  win_smoke.rs
install/: README.md  drs-install.ps1  drs-install.sh  install-mac.command  install-windows.bat  install-windows.ps1
python/: README.md
python/drission_sidecar/: __init__.py
python/tests/: test_sidecar.py
scripts/: linux-musl-build.sh  win-cross-build.sh
src/: a11y.rs  codegen.rs  error.rs  fingerprint.rs  human.rs  keys.rs  lib.rs  locator.rs  net.rs  page.rs  scrape.rs  static_element.rs  util.rs  web_page.rs  xpath.rs
src/browser/: actions.rs  cloudflare.rs  console.rs  download.rs  dump_env.rs  element.rs  frame.rs  handles.rs  interceptor.rs  keys.rs  listener.rs  mod.rs  screencast.rs  serve.rs  shadow.rs  slider.rs  static_element.rs  storage.rs  tab.rs  websocket.rs  xpath.rs
src/browser/assets/: dump_env_probe.js  env_template.js  fp_recipes.js
src/browser/assets/project/: README.md  demo.js  index.js  package.json  verify.js
src/cdp/: a11y.rs  actions.rs  browser.rs  cloudflare.rs  console.rs  container.rs  core.rs  debugger.rs  download.rs  dump_env.rs  element.rs  extras.rs  fetch.rs  fingerprint.rs  frame.rs  handles.rs  hook.rs  interceptor.rs  listener.rs  locate.rs  mod.rs  oopif.rs  options.rs  page.rs  pool.rs  recorder.rs  screencast.rs  scripts.rs  shadow.rs  stealth.rs  tab.rs  types.rs  websocket.rs
src/cdp/assets/: recorder.js
src/codec/: mod.rs
src/envkit/: mod.rs
src/launcher/: fetch.rs  mod.rs  options.rs  process.rs
src/ocr/: glyph.rs  mod.rs
src/pool/: checkpoint.rs  fingerprint.rs  health.rs  mod.rs  proxy_pool.rs  rotate.rs
src/protocol/: connection.rs  message.rs  mod.rs
src/session/: http.rs  mod.rs
src/transport/: mod.rs  unix.rs  windows.rs
tests/: public_api.rs
