[package]
name = "drission"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
authors = ["极数本源 (apizero.cn)"]
description = "Rust 反检测浏览器自动化 + 内置验证码识别:ddddocr 离线 OCR 与图片滑块缺口距离(极验/顶象),默认 Camoufox/Firefox、自动过 Cloudflare 盾、高并发爬虫与 XHR 监听拦截,DrissionPage 风格 API。Anti-detect browser automation in Rust with built-in ddddocr captcha OCR + slider-gap (GeeTest) solving, Camoufox, Cloudflare bypass — a Rust DrissionPage."
documentation = "https://docs.rs/drission"
homepage = "https://apizero.cn"
repository = "https://github.com/MageGojo/drission-rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["captcha", "ddddocr", "anti-detect", "drissionpage", "browser-automation"]
categories = ["web-programming", "api-bindings", "computer-vision"]
# 发布到 crates.io 时排除:构建产物 / 内部文档 / 各类运行测试产物(样本/吐环境/自训脚手架),
# 这些已在 .gitignore,这里再显式排除(双保险,确保 `cargo publish` 不打包)。
exclude = [
    "/dist",
    "/docs",
    "/target",
    "/yidun_samples",
    "/yidun-train",
    "/dump-env",
    "/dump-env-fp",
    "/douyin-env",
]

# docs.rs:用全部 feature 构建,确保 ocr / slider / cdp 的 API 在文档站可见
# (默认 docs.rs 只用 default features → 这些 feature-gated 类型会被隐藏)。
# 配合 src/lib.rs 顶部的 `#![cfg_attr(docsrs, feature(doc_auto_cfg))]` 显示 feature 徽标。
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# 后端选择。默认 = 纯 Chromium/CDP(最精简,不含 Camoufox 代码);Camoufox 全 opt-in。
default = ["cdp"]
# Chromium(Chrome / Edge / Brave / Electron,CDP)后端 —— 默认后端。
cdp = []
# Camoufox / Firefox(Juggler)反检测后端 + 全部高层能力(Page/WebPage/Session/Pool/吐环境/过盾…)。
# opt-in,真正 gate:不开 camoufox 则 browser/launcher/page/web_page/session/pool 都不编译。
camoufox = []
# 滑块/图片缺口距离识别(通用滑块 + 极验 + 顶象 ContentNcc)。基于 Camoufox Tab,故自动带入 camoufox。
slider = ["camoufox"]
# 验证码 OCR(ddddocr 预训练模型 + 纯 Rust tract 推理)。Ocr 识别器后端无关;
# tab.ocr_image 便捷方法需 camoufox。可选,避免给不需要的用户引入重依赖。
ocr = ["dep:image", "dep:tract-onnx", "dep:fontdue"]
tract-onnx = ["dep:tract-onnx"]
image = ["dep:image"]
# 纯算签名运行器:内嵌 QuickJS(rquickjs),把吐出的 env.js 编进单个二进制。后端无关,默认关、按需开。
signer = ["dep:rquickjs"]
fontdue = ["dep:fontdue"]
# Session(HTTP)模式的浏览器 TLS/JA3/JA4 + HTTP2 指纹伪装(wreq + BoringSSL)。默认关,按需开;
# 因 SessionPage 当前在 camoufox 门下,故 imply camoufox(同 slider)。需 cmake + C 编译器(编 BoringSSL)。
impersonate = ["camoufox", "dep:wreq", "dep:wreq-util"]

[dependencies]
async-trait = "0.1.89"
bytes = "1.12.0"
dirs = "6.0.0"
ego-tree = "0.11"
fontdue = { version = "0.9.3", optional = true }
futures-util = "0.3.32"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"], optional = true }
libc = "0.2.186"
os_pipe = { version = "1.2.3", features = ["io_safety"] }
reqwest = { version = "0.13.4", features = ["json", "stream", "socks"] }
# 内嵌 QuickJS 引擎(纯算签名运行器 `signer` feature 用),编译期把 QuickJS 由 C 源码静态编进二进制。
rquickjs = { version = "0.11", optional = true }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tract-onnx = { version = "0.23.3", optional = true }
# 浏览器 TLS/JA3/JA4 + HTTP2 指纹 HTTP 客户端(`impersonate` feature 用),reqwest 硬分叉 + BoringSSL。
wreq = { version = "5", optional = true }
# wreq 的浏览器模拟档(Chrome/Firefox/Safari/Edge 各版本的 TLS+HTTP2 指纹配方)。
wreq-util = { version = "2", optional = true }
zip = "8.6.0"

[dev-dependencies]
criterion = "0.7.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# ── 示例 feature 门控 ──────────────────────────────────────────────────────────
# 默认后端是纯 CDP;用 Camoufox `Browser`/`Page` 的示例必须声明 `required-features=["camoufox"]`,
# 否则默认 `cargo build --examples` 会因 camoufox 模块未编译而失败。
# 运行各示例(头注释里也都写了对应命令,复制即用):
#   cdp 示例:          cargo run --example cdp_demo                                   (默认即含 cdp)
#   Camoufox 系示例:   cargo run --example quickstart --no-default-features --features camoufox
#   滑块(slider):     cargo run --example geetest_slide --no-default-features --features slider
#   Camoufox+OCR:      cargo run --example ocr_captcha --no-default-features --features camoufox,ocr
#   cdp+OCR(点选):    cargo run --example yidun_click --features cdp,ocr
#   Session TLS 指纹:  cargo run --example session_tls --features impersonate
# ⚠️ Camoufox 系务必带 `--no-default-features`:默认 cdp 与 camoufox 并存时统一接口按「cdp 优先」解析,
#    会与 camoufox 示例的类型冲突(编译失败或跑成 cdp 后端)。cdp 系反之(默认即可)。

# Chromium/CDP 后端示例(默认即可)。
[[example]]
name = "cdp_demo"
required-features = ["cdp"]

[[example]]
name = "cdp_advanced"
required-features = ["cdp"]

# Chrome 自动下载分发(对标 CloakBrowser 首次运行自动下载)。
[[example]]
name = "cdp_fetch"
required-features = ["cdp"]

# 指纹探针:dump 全面指纹 JSON,有头/无头 diff 出无头破绽(反检测诊断工具)。
[[example]]
name = "cdp_fp"
required-features = ["cdp"]

# 无头 Client Hints 诊断:mask_ua 开/关对高熵 CH(fullVersionList 等)与 UA 的影响。
[[example]]
name = "hl_ch"
required-features = ["cdp"]

# 每浏览器不同指纹:CdpFingerprint/CdpFingerprintPool 起 N 个浏览器各套一份指纹,dump 验证各异。
[[example]]
name = "cdp_fingerprint"
required-features = ["cdp"]

# 多任务下载管理 tab.downloads()(CDP 原生下载事件,真机端到端)。
[[example]]
name = "cdp_download"
required-features = ["cdp"]

# 键盘:拟人输入 + 修饰组合键/热键(Ctrl/Cmd+A 等,CDP 原生 modifiers)。
[[example]]
name = "cdp_keyboard"
required-features = ["cdp"]

# CDP 高并发池 ChromiumPool(多 worker + 每任务独立 context + 断点续抓)。
[[example]]
name = "cdp_pool"
required-features = ["cdp"]

# CDP 吐环境 tab.dump_env()(探针 + env.js + 导出工程 + 同构双跑验证,复用 envkit)。
[[example]]
name = "cdp_dump_env"
required-features = ["cdp"]

# 纯算签名运行器(QuickJS,不开浏览器)。
[[example]]
name = "env_signer"
required-features = ["signer"]

# 目标检测(点选验证码)可行性探针:Det 跑通 common_det.onnx(CDP 截图喂入)。
[[example]]
name = "det_probe"
required-features = ["cdp", "ocr"]

# 点选/文字点选验证码(易盾 picture-click):det → 逐框 OCR → 按序可信点击(CDP)。
[[example]]
name = "yidun_click"
required-features = ["cdp", "ocr"]

# OCR/检测模型热替换(自训模型上线):自定义字符集 + 原地热替换 + 环境变量零改码(后端无关)。
[[example]]
name = "ocr_hotswap"
required-features = ["ocr"]

# 易盾点选样本采集(为阶段3 自训攒数据):反复弹挑战 → 切字框落盘 + OCR 猜测标签(CDP)。
[[example]]
name = "yidun_collect"
required-features = ["cdp", "ocr"]

# 易盾点选请求侦察:监听网络看验证码图片格式/来源 + 提示文字下发方式(CDP)。
[[example]]
name = "yidun_probe"
required-features = ["cdp"]

# 易盾点选风控侦察:普查监听事件 + 测点击事件密度 + 抓提交/check 请求(CDP)。
[[example]]
name = "yidun_detect"
required-features = ["cdp"]

# 滑块/缺口识别示例(slider 自动带入 camoufox)。
[[example]]
name = "dx_slide"
required-features = ["slider"]

[[example]]
name = "geetest_slide"
required-features = ["slider"]

[[example]]
name = "slider_local"
required-features = ["slider"]

# OCR 示例:用 Camoufox 的 tab.ocr_image,需 camoufox + ocr。
[[example]]
name = "ocr_captcha"
required-features = ["camoufox", "ocr"]

[[example]]
name = "apizero_login"
required-features = ["camoufox", "ocr"]

# Camoufox 后端示例(Browser/Page/Tab/Pool/Session/吐环境/过盾…),需 --features camoufox。
[[example]]
name = "quickstart"
required-features = ["camoufox"]

[[example]]
name = "form_input"
required-features = ["camoufox"]

[[example]]
name = "anti_detect"
required-features = ["camoufox"]

[[example]]
name = "stealth_check"
required-features = ["camoufox"]

[[example]]
name = "cf_check"
required-features = ["camoufox"]

[[example]]
name = "exa_cf"
required-features = ["cdp"]

[[example]]
name = "fetch_browser"
required-features = ["camoufox"]

[[example]]
name = "concurrent_listen"
required-features = ["camoufox"]

[[example]]
name = "intercept"
required-features = ["camoufox"]

[[example]]
name = "intercept_window"
required-features = ["camoufox"]

[[example]]
name = "listen_handle"
required-features = ["camoufox"]

[[example]]
name = "console_listen"
required-features = ["camoufox"]

[[example]]
name = "ws_listen"
required-features = ["camoufox"]

[[example]]
name = "ws_connect"
required-features = ["camoufox"]

[[example]]
name = "page_basics"
required-features = ["camoufox"]

[[example]]
name = "page_extras"
required-features = ["camoufox"]

[[example]]
name = "extras_demo"
required-features = ["camoufox"]

[[example]]
name = "relative_shadow"
required-features = ["camoufox"]

[[example]]
name = "ele_extras"
required-features = ["camoufox"]

[[example]]
name = "actions_drag"
required-features = ["camoufox"]

[[example]]
name = "form_fill"
required-features = ["camoufox"]

[[example]]
name = "file_upload"
required-features = ["camoufox"]

[[example]]
name = "screencast"
required-features = ["camoufox"]

[[example]]
name = "download_manager"
required-features = ["camoufox"]

[[example]]
name = "proxy_health"
required-features = ["camoufox"]

[[example]]
name = "pool_crawl"
required-features = ["camoufox"]

[[example]]
name = "session_mode"
required-features = ["camoufox"]

# Session 浏览器 TLS/JA3/JA4 指纹(wreq + BoringSSL),JA3 实测对比自验证。
[[example]]
name = "session_tls"
required-features = ["impersonate"]

[[example]]
name = "web_page_scrape"
required-features = ["camoufox"]

[[example]]
name = "dump_env_fingerprint"
required-features = ["camoufox"]

[[example]]
name = "douyin_listen"
required-features = ["camoufox"]

[[example]]
name = "douyin_listen_long"
required-features = ["camoufox"]

[[example]]
name = "douyin_capture"
required-features = ["camoufox"]

[[example]]
name = "douyin_dump_env"
required-features = ["camoufox"]

[[example]]
name = "bilibili_listen_long"
required-features = ["camoufox"]

[[example]]
name = "geetest_diag"
required-features = ["camoufox"]

[[example]]
name = "geetest_probe"
required-features = ["camoufox"]

[[example]]
name = "ocr_probe"
required-features = ["camoufox"]

[[example]]
name = "win_smoke"
required-features = ["camoufox"]

[[example]]
name = "win_diag"
required-features = ["camoufox"]

[[example]]
name = "win_cf_test"
required-features = ["camoufox"]

[[example]]
name = "win_bilibili_test"
required-features = ["camoufox"]

[target."cfg(unix)".dependencies]
command-fds = { version = "0.3.3", features = ["tokio"] }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Registry",
    "Win32_System_Threading",
] }

# 基准:纯函数(编解码 / 定位解析 / 采集导出),不开浏览器,CI 可跑。
[[bench]]
name = "parsing"
harness = false
